2005-03-23  Richard Hoelscher  <rah@rahga.com>

	* Makefile.am: support multiple scorefiles
	* glines.c: Marco's patch for high-score-support

	* glines.h:
	* glines.c: Marco Colombo's patch for configurable playfield
	size has been applied. Many macros have been replaced by variables,
	look for hfieldsize, vfieldsize, ncolors, npieces, and several more.
	(refresh_preview_pixmaps): Creates a blank pixmap for use in preview.
	(draw_preview): Now handles up to MAXNPIECES preview pixmaps.
	(route)(find_lines): Bulk of  macro replacement took place here.
	(set_sizes)(size_callback): New. Handle setting size from prefs.
	(game_props_callback): Add support for switching sizes among "Small",
	"Medium", "Large".
	(main): Use new alignment properties in the preview frame.

2005-03-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Patches from Dennis Cranston
	<dennis_cranston@yahoo.com> to make the game more HIG compliant.

	* Makefile.am (DISTCLEANFILES): Make sure installation doesn't
	fail if touch can't access the scores directory.

2005-03-17  Richard Hoelscher  <rah@rahga.com>

	* glines.c (create_menus): Use GtkUIManager API for menus.
	(move_timeout_changed_cb): Prefs checkbox watches gconf change.
	(refresh_pixmaps): Warnings on render error.
	(show_image_warning): New theme warning dialog.
	(main): Remove an unused hbox from the first revision.

2005-03-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/glines.xml: Bump the app version number. No revisions.

2005-01-03  Richard Hoelscher  <rah@rahga.com>

	* glines.c (load_image): Preimage API update, uri -> file. 

2004-12-20  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Patch from Marco Colombo to remove more hard-coded
	constants. Another step towards feature request #83532.

2004-12-13  Callum McKenzie  <callum@physics.otago.ac.nz>

        * glines.c: Some code cleanups. This includes some unnecessary 
	arithmetic that may have been the source of Marco's corruption