@@ -2,6 +2,18 @@
 
   <schemalist>
       <schema>
+      <key>/schemas/apps/glines/preferences/size</key>
+      <applyto>/apps/glines/preferences/size</applyto>
+      <owner>glines</owner>
+      <type>int</type>
+      <default>2</default>
+      <locale name="C">
+        <short>Playing field size</short>
+        <long>Playing field size. 1=Small, 2=Medium, 3=Large. Any other value is invalid.</long>
+      </locale>
+      </schema>
+
+      <schema>
       <key>/schemas/apps/glines/preferences/ball_theme</key>
       <applyto>/apps/glines/preferences/ball_theme</applyto>
       <owner>glines</owner>
